fix overflow y

--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
 .banner {
   width: 100vw;
   height: 100vh;
-  max-width: 100%;
-  max-height: 100%;
+  overflow-y: hidden;
 
   box-shadow: 0px 100px 70px -32px rgba(32, 32, 32, 0.6) inset;
   -webkit-box-shadow: 0px 100px 70px -32px rgba(32, 32, 32, 0.6) inset;
